kubernetes/deployment-files/fluentd.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: kube-system
  labels:
    app: fluentd
    version: v1
spec:
  selector:
    matchLabels:
      app: fluentd
      version: v1
  template:
    metadata:
      labels:
        app: fluentd
        version: v1
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - name: fluentd
          image: hands-on/fluentd:v1
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: journal
              mountPath: /var/log/journal
              readOnly: true
            - name: fluentd-extra-config
              mountPath: /fluentd/etc/conf.d
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: journal
          hostPath:
            path: /run/log/journal
        - name: fluentd-extra-config
          configMap:
            name: "fluentd-hands-on-config-map"
      terminationGracePeriodSeconds: 30
