kubernetes/deployment-files/composite-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: composite-product
  labels:
    app: composite-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: composite-product
  template:
    metadata:
      labels:
        app: composite-product
    spec:
      ### Required for Keycloak. It must be the IP Address of the keycloak-service
      hostAliases:
        - ip: "10.99.223.146"
          hostnames:
            - "mps.internal"
      containers:
        - name: composite-product
          image: hands-on/composite-product
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: composite-product
              # To mount the folder to minikube following command is required!
              # minikube mount C:\Users\patrick.oberkofler\Documents\GitHub\microservice-product-services\kubernetes\config-repo:/config-repo
              mountPath: /config-repo
      volumes:
        - name: composite-product
          hostPath:
            path: /config-repo
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: composite-product-service
#spec:
#  type: NodePort
#  selector:
#    app: composite-product
#  ports:
#    - protocol: TCP
#      port: 8080
#      targetPort: 8080
#      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: composite-product-service
spec:
  selector:
    app: composite-product
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
