kubernetes/deployment-files/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.2
          args: [
            "start",
            "--proxy-headers", "xforwarded",
            "--http-enabled=true"
          ]
          ports:
            - containerPort: 8080
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: keycloak-service
#spec:
#  type: NodePort
#  selector:
#    app: keycloak
#  ports:
#    - port: 80
#      targetPort: 8080
#      nodePort: 30443
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
