kubernetes/deployment-files/kibana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  selector:
    matchLabels:
      run: kibana
  template:
    metadata:
      labels:
        run: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.17.10
          ports:
            - containerPort: 5601
              name: http
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector:
    run: kibana
  ports:
    - port: 5601
      targetPort: 5601
