kubernetes/deployment-files/review.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review
  labels:
    app: review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - name: review
          image: hands-on/review
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: review
              # To mount the folder to minikube following command is required!
              # minikube mount C:\Users\patrick.oberkofler\Documents\GitHub\microservice-product-services\kubernetes\config-repo:/config-repo
              mountPath: /config-repo
      volumes:
        - name: review
          hostPath:
            path: /config-repo
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  selector:
    app: review
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
