kubernetes/deployment-files/ingress-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-elasticsearch
spec:
  rules:
    - host: elasticsearch.mps.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
