kubernetes/deployment-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: mps.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: composite-product-service
                port:
                  number: 8080
          - path: /actuator/health
            pathType: Prefix
            backend:
              service:
                name: composite-product-service
                port:
                  number: 8080
          - path: /openapi
            pathType: Prefix
            backend:
              service:
                name: composite-product-service
                port:
                  number: 8080
          - path: /webjars
            pathType: Prefix
            backend:
              service:
                name: composite-product-service
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
